--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server/server.js"
+  },
+  "engines": {
+    "node": "6.12.2"
   },
   "author": "",
   "license": "ISC",
